--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_todo">
+
+    <fragment
+        android:id="@+id/nav_todo"
+        android:name="com.treeengineering.simpletodoapp.ui.todo.ToDoFragment"
+        android:label="@string/fragment_todo_title"
+        tools:layout="@layout/fragment_todo" />
 
     <fragment
         android:id="@+id/nav_home"
