--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -12,6 +11,10 @@
         <variable
             name="addButtonEnabled"
             type="Boolean" />
+
+        <variable
+            name="addButtonVisibility"
+            type="int" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,7 +28,6 @@
             android:hint="@string/add_todo_hint"
             android:inputType="text"
             android:text="@{todoText}"
-            app:layout_constraintBottom_toTopOf="@id/recycler_view_todo"
             app:layout_constraintEnd_toStartOf="@id/image_add_todo"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintTop_toTopOf="@id/guideline_top" />
@@ -33,27 +35,36 @@
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/image_add_todo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:src="@drawable/ic_add_circle_black_24dp"
+            android:layout_height="0dp"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
             android:background="?android:selectableItemBackgroundBorderless"
             android:enabled="@{addButtonEnabled}"
+            android:visibility="@{addButtonVisibility}"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_add_circle_black_24dp"
             app:layout_constraintBottom_toBottomOf="@id/edit_text_todo"
-            app:layout_constraintTop_toTopOf="@id/edit_text_todo"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toEndOf="@id/edit_text_todo" />
+            app:layout_constraintStart_toEndOf="@id/edit_text_todo"
+            app:layout_constraintTop_toTopOf="@id/edit_text_todo" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_todo"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/layout_tab"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:tabTextAppearance="@style/ToDoTabLayoutTextAppearance"
+            app:layout_constraintStart_toStartOf="@id/guideline_start"
+            app:layout_constraintEnd_toEndOf="@id/guideline_end"
+            app:layout_constraintTop_toBottomOf="@id/edit_text_todo" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@id/edit_text_todo"
-            tools:listitem="@layout/item_todo_list" />
+            app:layout_constraintEnd_toEndOf="@id/guideline_end"
+            app:layout_constraintTop_toBottomOf="@id/layout_tab"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_top"
@@ -85,4 +96,5 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
